# induction-head-leakage-36ef-gemini

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_gemini_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_gemini_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: Are_induction_heads_a_large_source_of_leakage_induction_heads_copying_mechanism__20260419_224609.jsonl  github_repo_induction_heads_transformer_interpretability_20260419_225235.jsonl  induction_head_leakage_random_generation_transformer_20260419_224913.jsonl
papers/: README.md
papers/pages/: 2209.11895v1_In-context_Learning_and_Induction_Heads_manifest.txt  Induction_Head_Toxicity_v1_manifest.txt
results/: experiment_v2_results.csv  induction_heads_gpt2.csv  leakage_results.csv  single_head_ablation.csv
src/: analyze_results.py  examine_top_tokens.py  experiment_leakage.py  experiment_v2.py  identify_heads.py  single_head_ablation.py
